--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         </div>
     </div>
 
+    <!-- Use Firebase v8 (works with regular non-module scripts) -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
