FIX: Add missing Change Name button to HTML

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <header>
             <h1>🛒 Family Shopping List</h1>
             <p>Add items and check them off when purchased!</p>
+            <!-- Change Name button -->
+            <button id="changeNameBtn" class="change-name-btn">👤 Change Name</button>
         </header>
 
         <div class="add-item-section">
